# recall-rag

./: .gitignore  .pre-commit-config.yaml  Dockerfile  cloudbuild.yaml  compose.yaml  faiss_tutorial.py  generate_embeddings.py  main.py  pre_process.py  pyproject.toml  requirements.txt  scone.py  search.py
data/: processed.yaml
scone_data/: scone_docs.npy  scone_index.faiss  scone_knowledge.txt  scone_knowledge.yaml
