[project]
name = "recall-rag"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = "~=3.13"
dependencies = [
    "faiss-cpu>=1.10.0",
    "fastapi>=0.115.12",
    "google-genai>=1.7.0",
    "pyyaml>=6.0.2",
    "uvicorn>=0.34.0",
]

[dependency-groups]
scone = [
    "datasets>=3.4.1",
    "transformers>=4.50.1",
    "sentence-transformers>=4.0.1",
    "torch>=2.6.0",
]
